# snake

./: CMakeLists.txt  LICENSE  README.md  main.c
src/: food.c  food.h  macros.h  pos.h  snake.c  snake.h
